# afr-common-io-helpers

./: CMakeLists.txt  README.md  common_io_helpers.c  common_io_helpers.h
include/: common_io_helpers.h
src/: common_io_helpers.c
